// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoverObserver should always set isHovering to false on android 1`] = `
<HoverObserver>
  <Component>
    <Text>
      Not Hovering!
    </Text>
  </Component>
</HoverObserver>
`;

exports[`HoverObserver should always set isHovering to false on android 2`] = `
<HoverObserver>
  <Component>
    <Text>
      Not Hovering!
    </Text>
  </Component>
</HoverObserver>
`;

exports[`HoverObserver should render a HoverObserver with default props 1`] = `
<HoverObserver
  hoverDelayInMs={0}
  hoverOffDelayInMs={0}
  onHoverChanged={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <Component>
      <Text>
        Not Hovering!
      </Text>
    </Component>
  </div>
</HoverObserver>
`;

exports[`HoverObserver should render a HoverObserver with default props 2`] = `
<HoverObserver
  hoverDelayInMs={0}
  hoverOffDelayInMs={0}
  onHoverChanged={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <Component>
      <Text>
        Hovering!
      </Text>
    </Component>
  </div>
</HoverObserver>
`;

exports[`HoverObserver should render a HoverObserver with default props 3`] = `
<HoverObserver
  hoverDelayInMs={0}
  hoverOffDelayInMs={0}
  onHoverChanged={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <Component>
      <Text>
        Not Hovering!
      </Text>
    </Component>
  </div>
</HoverObserver>
`;
